# research_template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  dvc.yaml  myst.yml  pixi.toml  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: python-coding.instructions.md
.github/workflows/: ci.yml  citation.yml  codeql.yml  conventional-commits.yml  dvc-check.yml  lint.yml  notebooks.yml  pixi-update.yml  pre-commit-autoupdate.yml  reproducibility.yml  typecheck.yml
docs/: index.md
docs/api/: reference.md
docs/tutorials/: getting_started.md
notebooks/: 01_eda.ipynb  02_results.ipynb  02_results.py
scripts/: convert_notebooks.py  train.py  train_zen.py
src/myproject/: __init__.py
src/myproject/data/: loading.py
src/myproject/models/: baseline.py
src/myproject/trainers/: trainer.py
tests/: test_data.py  test_models.py
