[project]
name = "my-research-project"
version = "0.1.0"
description = "A scientific research project template"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myproject"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/myproject --cov-report=term-missing"

[tool.coverage.run]
source = ["src/myproject"]

[tool.coverage.report]
show_missing = true
